--- a/GameShop/shop/templates/shop/about.html
+++ b/GameShop/shop/templates/shop/about.html
@@ -6,6 +6,9 @@
 
 {% block content %}
   <div id="game_page">
-      <h2>Неокоторая полезная информация о сайте</h2>
+      <h2>Сайт написал Вершинин Николай</h2>
+      <h3>Telegram: https://t.me/faster190</h3>
+      <h3>Email: Nickvershinin@mail.ru</h3>
+      <h3>Git: https://github.com/Faster190</h3>
   </div>
 {% endblock %}
