--- a/GameShop/shop/templates/shop/main.html
+++ b/GameShop/shop/templates/shop/main.html
@@ -33,6 +33,7 @@
                     <a href="/logout"><button class="navhref">Выйти</button></a>
                 {% else %}
                     <a href="{% url 'login' %}"><button class="navhref">Войти</button></a>
+                    <a href="{% url 'register' %}"><button class="navhref">Регистрация</button></a>
                 {% endif %}
     </div>
 </header>
@@ -60,7 +61,7 @@
 
 <footer>
     <div id="footer">
-        <p>footer</p>
+        <p>Git: https://github.com/Faster190</p>
     </div>
 </footer>
 
